--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -159,3 +159,27 @@ header{
   margin: 40px;
   padding: 10px;
 }
+
+.idea-card {
+  height: 340px;
+  padding: 10px;
+  min-width: 280px;
+  max-width: 280px;
+  text-align: center;
+}
+
+.idea-card-icon {
+  margin: auto;
+  width: 50px;
+}
+
+.idea-card-title-cut {
+  text-overflow: ellipsis;
+  white-space:nowrap;
+  overflow:hidden;
+  max-width: 260px;
+}
+
+.idea-card-brief-cut {
+
+}
