--- a/client/app/modules/admin/challenge/templates/challengeSettings.tpl.html
+++ b/client/app/modules/admin/challenge/templates/challengeSettings.tpl.html
@@ -1,9 +1,9 @@
-<md-toolbar scroll-shrink class="md-accent">
+<md-toolbar scroll-shrink>
     <div class="center">
         {{ challenge.title }} Settings
     </div>
 </md-toolbar>
-<md-content class="right-part">
+<md-content>
     <form name="projectBasic" layout="column">
         <md-input-container>
             <label for="title">Title</label>
@@ -68,5 +68,10 @@
         </div>
     </div>
     <p ng-if="!badges">No badges so far.</p>
+
+    <br>
+    <br>
+    <br>
+    <br>
 
 </md-content>
