add like and follow buttons

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -147,6 +147,22 @@ header{
   z-index: 100;
 }
 
+.idea-button-like {
+  position: absolute;
+  /*top: -32px;*/
+  margin-top: 40px;
+  margin-left: -85px;
+  z-index: 100;
+}
+
+.idea-button-follow {
+  position: absolute;
+  /*top: -32px;*/
+  margin-top: 40px;
+  margin-left: 100px;
+  z-index: 100;
+}
+
 .link-no-decoration {
   text-decoration: none;
   color: black;
