fix CSS name of like and follow button on idea-card

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -147,7 +147,7 @@ header{
   z-index: 100;
 }
 
-.idea-button-like {
+.idea-card-button-like {
   position: absolute;
   /*top: -32px;*/
   margin-top: 40px;
@@ -155,7 +155,7 @@ header{
   z-index: 100;
 }
 
-.idea-button-follow {
+.idea-card-button-follow {
   position: absolute;
   /*top: -32px;*/
   margin-top: 40px;
