--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -109,7 +109,7 @@
 
                     <md-grid-list md-cols="3" md-row-height="500px">
                         <md-grid-tile ng-repeat="idea in challenge.ideas">
-                            <idea-card idea-id="idea" class="md-whiteframe-z2" ng-repeat="idea in challenge.ideas"></idea-card>
+                            <idea-card idea-id="idea" class="md-whiteframe-z2"></idea-card>
                         </md-grid-tile>
                     </md-grid-list>
                 </div>
