fixed trello input bug

--- a/client/app/modules/admin/project/templates/edit.tpl.html
+++ b/client/app/modules/admin/project/templates/edit.tpl.html
@@ -58,7 +58,7 @@
         </div>
         <md-input-container >
             <label for="trello">Trello Id (like <code>U0aBsIQl</code>)</label>
-            <input ng-disabled="!project.showProgress" id="trello" type="text"ng-model="project.trello" />
+            <input id="trello" type="text"ng-model="project.trello" />
         </md-input-container>
         <md-button flex class="md-raised md-button-colored" type="button" ng-click="updateProject($event)" ng-disabled="">Update</md-button>
     </form>
