--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -26,6 +26,9 @@
                 <section class="challenge-home" layout="column">
                     <article class="html-content" flex ng-bind-html="challenge.home"></article>
                     <div class="participate-btn">
+                        <md-button ng-if="currentUser" ui-sref="createIdea({ relatedChallenge: challenge._id })" class="md-raised md-button-colored">
+                            Create Idea
+                        </md-button>
                         <md-button ng-if="currentUser" ng-click="participate()" class="md-raised md-button-colored">
                             Create Project
                         </md-button>
