--- a/client/app/modules/project/templates/project-home.tpl.html
+++ b/client/app/modules/project/templates/project-home.tpl.html
@@ -14,6 +14,11 @@
             <a target="_blank" class="twitter-share-button" href="https://twitter.com/intent/tweet?text=https://ideaweave.io/project/{{ project.title }}/home%20on%20IdeaWeave">
                 <img ng-src="images/twitter-mini.png">
             </a>
+            <div class="fb-share-button" data-href="https://ideaweave.io/project/{{ project.title }}/home" data-layout="button_count">
+            </div>
+            <a href="mailto:?subject=See the project {{ project.title }} on IdeaWeave&amp;body=Check out this https://ideaweave.io/project/{{ project.title }}/home." title="Share by Email">
+              <img src="images/email-mini.png">
+            </a>
             <!-- <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
             <script type="IN/Share" data-url="http://ideaweave.io/project/{{ project.title }}/home" data-counter="top"></script> -->
         </div>
