New image crop working for user profile

--- a/client/app/modules/admin/profile/sass/adminProfile.scss
+++ b/client/app/modules/admin/profile/sass/adminProfile.scss
@@ -1,5 +1,10 @@
 #crop-poster-modal {
 	max-height: inherit;
+	height: 470px;
 
-	height: 550px;
+	#image-container {
+		width: 500px; 
+		height: 350px; 
+		margin-top: 8px;
+	}
 }
