--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -23,6 +23,8 @@ $baseColor : rgb(0, 51, 102);
 @import "../modules/admin/challenge/sass/adminChallenge";
 @import "../modules/admin/profile/sass/adminProfile";
 @import "../modules/etherpad/sass/etherpad";
+@import "../modules/common/image-chooser/image-chooser";
+
 
 
 body,html{
