--- a/client/app/modules/admin/profile/templates/modal/cropPosterModal.tpl.html
+++ b/client/app/modules/admin/profile/templates/modal/cropPosterModal.tpl.html
@@ -1,18 +1,16 @@
 <md-dialog id="crop-poster-modal">
-    <md-toolbar layout="row" layout-align="">
-        <div layout layout-align="start center">
-            <span flex>Your profile page</span>
-            <md-button class="md-fab" ng-click="cancel()">
-                <i class="fa fa-times" ></i>
-            </md-button>
-        </div>
+    <md-toolbar layout="row" layout-align="start center">
+        <p>Your Poster Image</p>
+        <div flex></div>
+        <md-button class="md-fab" ng-click="save()" ng-disabled="!isImageChosen" analytics-on analytics-event="choosePoster">
+            <i class="fa fa-save"></i>
+        </md-button>
+        <md-button class="md-fab" ng-click="cancel()">
+            <i class="fa fa-times" ></i>
+        </md-button>
     </md-toolbar>
-    <image-crop
-            data-width="300"
-            data-height="300"
-            data-shape="circle"
-            data-step="imageCropStep"
-            data-result="imageCropResult"
-            ></image-crop>
 
+    <div id="image-container">
+        <image-chooser final-image="imageCropResult" is-image-chosen="isImageChosen"></image-chooser>
+    </div>
 </md-dialog>
