--- a/client/app/modules/common/image-chooser/image-chooser.scss
+++ b/client/app/modules/common/image-chooser/image-chooser.scss
@@ -1,14 +1,20 @@
-.image-chooser-drop {
-  width: 100%;
-  height: 100%;
+image-chooser {
+	width: 500px; 
+	height: 350px; 
+	margin-top: 8px;
 
-  background-color: gray;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: 50% 50%;
-}
+	.image-chooser-drop {
+	  width: 100%;
+	  height: 100%;
 
-.image-chooser-drop-dragover {
-  border: 3px black dashed;
-  background-color: $baseColor;
+	  background-color: gray;
+	  background-repeat: no-repeat;
+	  background-size: contain;
+	  background-position: 50% 50%;
+	}
+
+	.image-chooser-drop-dragover {
+	  border: 3px black dashed;
+	  background-color: $baseColor;
+	}
 }
