Handled badges and removed old code

--- a/client/app/modules/badge/badge.scss
+++ b/client/app/modules/badge/badge.scss
@@ -4,3 +4,15 @@ badge-card {
 		height: 100px;
 	}
 }
+
+#badge-image-container {
+	width: 500px; 
+	height: 350px; 
+	margin-top: 8px;
+}
+
+#create-badge-modal {
+	max-height: inherit;
+	width: 520px;
+	height: 470px;
+}
