--- a/client/app/modules/badge/templates/create-badge-modal.tpl.html
+++ b/client/app/modules/badge/templates/create-badge-modal.tpl.html
@@ -1,4 +1,4 @@
-<md-dialog>
+<md-dialog id="create-badge-modal">
     <md-toolbar layout="row" layout-align="">
         <div layout layout-align="start center">
             <span flex>{{ title }}</span>
@@ -21,9 +21,9 @@
                 <textarea ng-model="badge.description" required></textarea>
             </md-input-container>
         
-            <div class="dropbox" ngf-drop ng-model="selectedFiles" ngf-drag-over-class="dropbox-dragover" style="background-image:url({{ badge.image }})" flex></div>
-            <md-button ngf-select ng-model="selectedFiles">Pick file or drop above</md-button>
-
+            <div id="badge-image-container">
+                <image-chooser final-image="badge.image" shape="'square'"></image-chooser>
+            </div>
         </form>
     </md-content>
 </md-dialog>
