--- a/client/app/modules/project/templates/project-home.tpl.html
+++ b/client/app/modules/project/templates/project-home.tpl.html
@@ -19,7 +19,7 @@
             <a href="mailto:?subject=See the project {{ project.title }} on IdeaWeave&amp;body=Check out this https://ideaweave.io/project/{{ project.title }}/home." target="_blank" title="Share by Email">
               <img src="images/email-mini.png">
             </a> -->
-            <a target="_blank" title="Share this page" href="http://www.sharethis.com/share?url=https://ideaweave.io/project/{{ project.title }}/home&amp;title={{ project.title }} on IdeaWeave&amp;summary={{ project.brief }}&amp;img={{ project.banner }}&amp;pageInfo=%7B%22hostname%22%3A%22[www.ideaweave.io]%22%2C%22publisher%22%3A%22[INSERT PUBLISHERID]%22%7D"><img width="86" height="25" alt="Share this page" src="http://w.sharethis.com/images/share-classic.gif"></a>
+            <a target="_blank" title="Share this page" href="http://www.sharethis.com/share?url=https://ideaweave.io/project/{{ project.title }}/home&amp;title={{ project.title }} on IdeaWeave&amp;summary={{ project.brief }}&amp;img=https://ideaweave.io/images/svg/logoheader.svg&amp;pageInfo=%7B%22hostname%22%3A%22[www.ideaweave.io]%22%2C%22publisher%22%3A%22[INSERT PUBLISHERID]%22%7D"><img width="86" height="25" alt="Share this page" src="http://w.sharethis.com/images/share-classic.gif"></a>
             <!-- <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
             <script type="IN/Share" data-url="http://ideaweave.io/project/{{ project.title }}/home" data-counter="top"></script> -->
         </div>
