--- a/client/app/modules/project/templates/project-home.tpl.html
+++ b/client/app/modules/project/templates/project-home.tpl.html
@@ -13,6 +13,7 @@
         <div class="btn-group">
             <!-- <span class='st_facebook_large' displayText='Facebook' st_title='{{ project.title }} on IdeaWeave'></span> -->
             <span class='st_twitter_large' displayText='Tweet' st_title='{{ project.title }} on IdeaWeave'></span>
+            <a target="_blank" class="twitter-share-button" href="https://twitter.com/intent/tweet?text=https://ideaweave.io/project/{{ project.title }}/home%20on%20IdeaWeave">Tweet</a>
             <span class='st_linkedin_large' displayText='LinkedIn' st_title='{{ project.title }} on IdeaWeave'></span>
             <!-- <span class='st_googleplus_large' displayText='Google +' st_title='{{ project.title }} on IdeaWeave'></span> -->
             <span class='st_email_large' displayText='Email' st_title='{{ project.title }} on IdeaWeave'></span>
